# tainted-code-filtering-action

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  action.yml  build.sh  cmake_install.cmake  dfsan_abilist.txt  entrypoint.sh  test.cpp
.github/workflows/: main.yml
lib/llvm-pass/: Taint.cpp
runtime/: taint.h  to_json.cpp
